kubernetes/ingress/ingresspathmiksen.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/allow-http: "false"
    ingress.kubernetes.io/ssl-redirect: "false"
    virtual-server.f5.com/ip: 10.245.136.15
  creationTimestamp: 2018-10-17T06:39:04Z
  generation: 3
  name: default-ingress
  namespace: miksen-utbild2
  resourceVersion: "29799685"
  selfLink: /apis/apps/v1/namespaces/miksen-utbild2/ingresses/default-ingress
  uid: 57137050-d1d7-11e8-b9ec-0050562e8457
spec:
  rules:
  - host: miksen-utbild2.ok8s.cuv.techfellas.eu
    http:
      paths:
      - backend:
          serviceName: auth
          servicePort: 80
        path: /login
      - backend:
          serviceName: auth
          servicePort: 80
        path: /auth
      - backend:
          serviceName: auth
          servicePort: 80
        path: /foo
      - backend:
          serviceName: hello
          servicePort: 80
        path: /
  tls:
  - secretName: ingress-miksen-utbild2-24h
status:
  loadBalancer:
    ingress:
    - ip: 10.245.136.15
